refactor: Separate header, change startDate calculations, unify naming, separate functions, add locale
Draw header on separate canvas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>Scheduler</title>
   </head>
   <body>
     <div id="root"></div>
